--- a/presentations/session-01.Rmd
+++ b/presentations/session-01.Rmd
@@ -6,7 +6,7 @@ output:
   theme: "Malmoe"
   fonttheme: "structurebold"
 params: 
-  coupon: "esc-vic"
+  coupon: "waterra"
 editor_options:
   chunk_output_type: console
 ---
