--- a/course/chlorine-taste.Rmd
+++ b/course/chlorine-taste.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, dpi = 300)
 
 ```{r}
 library(tidyverse)
-labdata <- read_csv("data/labdata.csv")
+labdata <- read_csv("../data/water_quality.csv")
 chlorine <- filter(labdata, Measure == "Chlorine Total")
 ```
 
