--- a/course/level-1.Rmd
+++ b/course/level-1.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "$R^4H_2O$"
+title: "R4H2O: Level 1"
 subtitle: "Level One"
 date: "`r format(Sys.Date(), '%d %B %Y')`"
 output: 
     revealjs::revealjs_presentation:
+        self_contained: false
         theme: league
         highlight: zenburn
         smart: true
@@ -18,8 +19,7 @@ editor_options:
 knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE, dpi=300)
 ```
 
-# {data-background="images/r4h2o-banner.jpg"}
-# Data Science for Water Professionals {data-background="images/2019-workshop-melbourne.jpg"}
+# {data-background="../images/r4h2o-banner.jpg"}
 
 ## Learning Objectives Level 1
 - Apply the principles of strategic data science to solve water problems
@@ -28,75 +28,82 @@ knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE, dpi=300)
 - Develop presentations, reports, and applications to share results
      
 ## Course Book
-[lucidmanager.org/r4h2o](https://lucidmanager.org/r4h2o)
 
-![](images/r4h2o-cover-3d.png)
+![](../images/r4h2o-cover-3d.png)
 
 ## Program Level 1
+<div class="cols">
 1. Principles of Data Science
 2. Basics of the R Language
-3. Case Study 0: Open channel flows
-4. Case Study 1: Water quality data
+3. Case Study: Channel flows
+4. Case Study: Water quality data
     - Reading CSV and Spreadsheet data
     - Descriptive Statistics
 
-5. Visualise data with ggplot2
+5. Visualise data with _ggplot2_
 6. Data science workflow
 7. Creating data products
-
+</div>
+<div class="cols">
+![](../images/2019-workshop-melbourne.jpg)
+</div>
 # Introductions
-![](images/data-science-evolution.png)
+![](../images/data-science-evolution.png)
+
+# Data Science Learning Curve
+![](../images/r-learning-curve.jpg){height=500}
 
 # Principles of Data Science
-![](images/strategic-data-science.png)
+![](../images/strategic-data-science.png)
 
 ## What is Data Science?
-![](images/conway.png){height=400}
-
-> Many data scientists have published modifications of this model. Can you think of some other competencies specific to analysing data?
+<div class="cols">
+![](../images/conway.png){height=400}
 
 <small>Conway Venn Diagram ([drewconway.com](http://drewconway.com/zia/2013/3/26/the-data-science-venn-diagram)).</small>
+</div>
+<div class="cols">
+> Many data scientists have published modifications of this model. Can you think of some other competencies for data scientists?
+</div>
 
 ## Don't Believe the Hype
-![](images/sexiest-job.png)
+![](../images/sexiest-job.png)
 
 <small>Source: _Harvard Business Review_.</small>
 
 ## What is Good Data Science?
-![](images/vitruvius.png){height=400}
+![](../images/vitruvius.png){height=400}
 
 <small>Vitrivian triangle (_venustas_, _firmitas_, _utilitas_)</small>
 
 ## What is Useful Data Science?
-![](images/feedback-loop.png)
-
-## What is Sound Data Science?
-![](images/soundness.png)
-
-## GiGo
-Garbage In --- Garbage Out
+![](../images/feedback-loop.png)
 
 ## Spreadsheets are Chaos
-![](images/reverse-engineer-spreadsheet.jpg)
+![](../images/reverse-engineer-spreadsheet.jpg)
 
-## Code is Poetry
-```{r, eval=FALSE, echo=TRUE}
-library(readxl)
-reservoirs <- read_excel("reservoirs.xlsx", sheet = 1)
+## Code is Poetry: R
+```{r echo=TRUE}
+library(readr)
+library(dplyr)
+labdata <- readr::read_csv("data/water_quality.csv")
+group_by(labdata, Measure) %>% 
+    summarise(min = min(Result),
+              mean = mean(Result),
+              sd = sd(Result))
+```
 
-reservoirs %>%
-    select(Date, River_Flow, Natural_Flow) %>%
-    muate(ERV = ifelse(Natural_Flow <= 8, 4, Natural_Flow / 2),
-          Date = as.Date(Date, format = "%d/%m/%Y")) %>%
-    pivot_longer(-Date,
-                 values_to = "Flow",
-                 names_to = "Source")  %>%
-    ggplot(aes(Date, Flow, col = Source)) +
-    geom_line()
+## Code is Poetry: Python
+```{python echo=TRUE}
+import pandas as pd
+import numpy as np
+labdata = pd.read_csv("data/water_quality.csv")
+ 
+labdata.groupby("Measure")["Result"].agg([np.min, np.mean, np.std])
 ```
 
 # Basics of the R Language
-![](images/rstudio.png)
+![](../images/rstudio.png)
 
 ## Desktop version
 1. Download and install _R_ and _RStudio_
@@ -124,7 +131,7 @@ reservoirs %>%
   - Auto-completion
   
 ## BODMAS
-![](images/memes.jpg)
+![](../images/memes.jpg)
 
 ```{r, echo=TRUE}
 3 - 3 * 6 + 2
@@ -159,7 +166,7 @@ par(mar = c(4, 4, 2, 1))
 ```{r, echo=TRUE, fig.width=6, fig.height=2.5}
 diameter <- 50:350
 pipe_area <- (pi / 4) * (diameter / 1000)^2
-plot(diameter, pipe_area, type = "l", col = "blue", main = "Pipe Section Area")
+plot(diameter, pipe_area, type = "l", col = "blue", main = "Pipe Area")
 abline(v = 150, col = "grey", lty = 2)
 abline(h = (pi / 4) * (150 / 1000)^2, col = "grey", lty = 2)
 points(150, (pi / 4) * (150 / 1000)^2, col = "red")
@@ -167,100 +174,135 @@ points(150, (pi / 4) * (150 / 1000)^2, col = "red")
 
 
 ## Coding Principles
-![](images/computer-bug.png){width="100%"}
-
+![](../images/computer-bug.png){width="100%"}
 <small>First computer bug (1947)</small>
 
-## Using the Editor
-<div class="column" style="float:left; width: 33%">
-### Natural Language
-- Nouns (variables - meaningful
-    - <small>`_` or `.` or `camelCase`</small>
-- Verbs (functions)
-- Phrases (code)
-- Context
-</div>
+Open: `scripts/02-basics.R`
 
-<div class="column" style="float:left; width: 33%">
-### Bugs
+## Variable Names
+Use meaningful variable names and use a consistent naming convention
+
+- `flowdaily`: All lowercase
+- `flow.daily`: Period-separated
+- `flow_daily`: Snake case
+- `flowDaily`: Camel case
+- `FlowDaily`: Upper camel case
+
+## Bugs
+- Debugging (step through code)
 - Typos (lintr)
-- Error messes (copy and paste into search engine)
+- Look at indentation
+- Error messages (copy and paste into search engine)
 - Help files
-</div>
 
-<div class="column" style="float:left; width: 33%">
-### Scripts and Projects
+## Scripts and Projects
 - Working Directory
 - Open Script
 - Commenting
 - Indentation
-</div>
 
-# Case Study 0: Channel Flow {data-background="images/weirplate.jpg"}
+## R4H2O Cheat Sheet
+![](../images/r4h2o-cheat-sheet.png){height=500}
+
+# Case Study 0: Channel Flow {data-background="../images/open-channel.jpg"}
 
 ## Discharge formula
+<div class="cols">
 $$Q = \frac{2}{3} C_d \sqrt{2g} \; lh^\frac{3}{2}$$
 
 - $Q$: Discharge in m^3^/s
 - $C_d$: Discharge coefficient
-- $g$: Acceleration of gravity (9.81 m/s^2^)
+- $g$: Acceleration of gravity
 - $l$: Crest length [m]
-- h: Head above crest level [m]
+- h: Head above crest [m]
+</div>
+<div class="cols">
+![](../images/rectangular-weir.png)
+</div>
 
 ## Coding Practice
 <div class="column" style="float:left; width: 50%">
 Create an R script and answer:
 
-1. What is the flow in the channel in m^3^/s when the height $h = 100$ mm?
+1. What is the flow ($Q$) in the channel in m^3^/s when the height $h = 100$ mm?
 2. What is the average flow for these three heights: 150mm, 136mm, 75mm, in litres per second?
-3. Visualise the flow in m^3^/s for all heights between 50mm and 500mm
+3. Plot the flow in m^3^/s for all heights between 50mm and 500mm.
 </div>
 
 <div class="column" style="float:right; width: 50%">
 $Q = \frac{2}{3} C_d \sqrt{2g} \; lh^\frac{3}{2}$
 
-- $Q$: Discharge in m^3^/s
-- $C_d$: Discharge coefficient ($C_d=0.62$)
-- $g$: Acceleration of gravity (9.81 m/s^2^)
-- $l$: Crest width ($l=0.5$ m)
-- $h$: Head above crest level [m]
+- $C_d C_d=0.62$
+- $g = 9.81 m/s^2$
+- $l = 0.5 m$
 </div>
 
+## Solution
+
+`scripts/case-study-0.R`
+
+```{r, echo=TRUE}
+# Define constants
+
+cd <- 0.62
+g <- 9.81
+b <- 0.5
+
+# Question 1
+# Flow in m3/2 when h = 100 mm
+
+h1 <- 100 / 1000
+q1 <- (2 / 3) * cd * sqrt(2 * g) * b * h1^(3 / 2)
+q1
+```
+
+# 
+![](../images/coffee.jpg)
+
 # Exploring Data with Tidyverse
-![](images/tidyverse.png)
+![](../images/tidyverse.png)
 
 ## Base R functions
   - Basic programming functions
   - Arithmetic
   - Statistics
   - Plotting
-  - Extendible with functions
+  - Extensible with functions (packages)
 
 ## R Packages
 - Packages to extend base functionality
   - Distributed mainly through [CRAN](https://cran.r-project.org/)
   - Comprehensive R Archive Network
+- Install with `install.packages("dplyr")`
 - Call library to access functions: `library(dplyr)`
 - Or, add library name and two colons: `dplyr::filter()`
 
 ## Tidyverse
+<div class="cols">
 - Collection of R packages
 - Easy data manipulation
 - 'syntactic sugar'
+- Activate with `library(tidyverse)` or individual packages
+
+_Install the Tidyverse packages on your (cloud) computer_
+</div>
+<div class="cols">
+![](../images/tidyverse.png)
+</div>
 
 # Case Study 1: Water Quality
 ```{r, fig.asp=9/16}
 library(tidyverse)
 library(lubridate)
-gormsey_2070 <- read_csv("casestudy1/gormsey.csv") %>% 
-    filter(year(Date) == 2069 & Suburb == "Snake's Canyon")
+labdata_2069 <- read_csv("data/water_quality.csv") %>% 
+    filter(year(Date) == 2069 & Suburb == "Hallburgh")
 
-ggplot(gormsey_2070, aes(Date, Result)) + 
+ggplot(labdata_2069, aes(Date, Result)) + 
     geom_line(alpha = 0.9, col = "dodgerblue") + 
     facet_wrap(~Measure, scales = "free_y") + 
     theme_minimal() + 
     labs(title = "Water Quality Data Gormsey",
-         subtitle = unique(gormsey_2070$Suburb),
+         subtitle = unique(labdata_2069$Suburb),
          caption = "R4H2O")
 ```
 
@@ -271,37 +313,26 @@ ggplot(gormsey_2070, aes(Date, Result)) +
   - API
   - Scraping
 
-## CSV files
-- Use only the top row as a header
-- Don’t use colours to indicate values
-- Prevent using spaces in column names
-- Don’t add any spreadsheet calculations
-- Every cell should be a data point or remain empty
-
 ## Reading CSV files
 - `readr` package for CSV files (part of Tidyverse)
     - `read_csv()` faster alternative for `read.csv()`
     - Look at help text
 
-- File names in R
+- File names in R:
   - Unix-based (slash instead of backslash)
-  - Results in data frame / tibble
   
-```{r,echo=TRUE, results='hide'}
-library(tidyverse)
-gormsey <- read_csv("casestudy1/gormsey.csv")
+```{r, echo = TRUE}
+# CSV Files
+library(readr)
+labdata <- read_csv("data/water_quality.csv")
 
-names(gormsey)
-dim(gormsey)
-ncol(gormsey)
-nrow(gormsey)
-
-head(gormsey)
-str(gormsey)
-glimpse(gormsey)
+# Reading Excel spreadsheets
+labdata <- readxl::read_excel("data/water_quality.xlsx", 
+                              skip = 2, sheet = "data")
 ```
+Open `scripts/03-data-frames.R`
 
-## Variable classes
+## Variable Classes
 - Integer (${\ldots -3, -2, -1, 0, 1, 2, 3, \ldots}$)
 - Numeric (Real numbers) ($\mathbb{R}$)
 - Complex numbers ($a + bi$)
@@ -311,10 +342,22 @@ glimpse(gormsey)
 - Boolean (`TRUE`, `FALSE`)
 
 ## Variable Types
-![](images/variable-types.png)
+![](../images/variable-types.png)
 
 Scalar, vector and data frame / tibble (matrix)
 
+## Explore Data Frame Properties
+
+```{r,echo=TRUE, results='hide'}
+names(labdata)
+dim(labdata)
+ncol(labdata)
+nrow(labdata)
+
+head(labdata)
+str(labdata)
+glimpse(labdata)
+```
 
 ## Exploring data frames
 - `df[rows, columns]`
@@ -322,11 +365,11 @@ Scalar, vector and data frame / tibble (matrix)
 - `glimpse(df)`
 
 ```{r, echo=TRUE, results='hide'}
-gormsey[12:13, ]
-gormsey[, 4:5]
-gormsey[1:2, c(2, 4:5, 6)]
-gormsey[1:2, c(-1, -3, -7)]
-gormsey$Date[1:6]
+labdata[12:13, ]
+labdata[, 4:5]
+labdata[1:2, c(2, 4:5, 6)]
+labdata[1:2, c(-1, -3, -7)]
+labdata$Date[1:6]
 ```
 
 What is the sample number of the last sample in the Gormsey data? 
@@ -347,76 +390,68 @@ a * 2
 
 "small" > "large" 
 
-gormsey$Measure == "Turbidity" & gormsey$Result > 5
+labdata$Measure == "Turbidity" & labdata$Result > 5
 ```
 
 ## Filtering
-![](images/filter.png)
+![](../images/filter.png)
 
 ```{r, echo=TRUE, results='hide'}
 # Three methods
 
-gormsey[gormsey$Measure == "Turbidity", ]
+labdata[labdata$Measure == "Turbidity", ]
 
-subset(gormsey, Measure == "Turbidity")
+subset(labdata, Measure == "Turbidity")
 
 library(dplyr)
-filter(gormsey, Measure == "Turbidity")
+filter(labdata, Measure == "Turbidity")
 
-turb5 <- filter(gormsey, Measure == "Turbidity" & Result > 5)
+turb5 <- filter(labdata, Measure == "Turbidity" & Result > 5)
 ```
 
 ## Counting Results
 ```{r, echo=TRUE}
-length(gormsey$Measure)
+length(labdata$Measure)
 
-unique(gormsey$Measure)
+unique(labdata$Measure)
 
-table(gormsey$Measure)
+table(labdata$Measure)
 ```
 
 ## dplyr counting
 ```{r, echo=TRUE}
-count(gormsey, Measure)
+turbidity <- filter(labdata, Measure == "Turbidity")
+turbidity_count <- count(turbidity, Suburb, name = "Samples")
+turbidity_count
 ```
-
-# R4H2O Cheat Sheet
-[lucidmanager.org/r4h2o/cheat-sheet.pdf](https://lucidmanager.org/r4h2o/cheat-sheet.pdf)
-
-![](images/r4h2o-cheat-sheet.png){height=400}
 
 ## Coding Practice
 Write a script to answer these questions:
 
-1. How many turbidity results in all suburbs, except Strathmore, are lower than 0.1 NTU?
-2. Which sample points had a non-zero E. coli count?
-3. Create a table that counts the number of THM samples per suburb
+1. Create a table of the number of E. coli regulation breaches by suburb (`Result > 0`).
+2. Which sample point has the most number of samples taken?
+3. On how many days were samples taken?
+
+Solutions in `scripts/case-study-1.R`
 
 # Descriptive Statistics
+<div class="cols">
+Measures of:
 
-```{r, fig.asp=9/16}
-library(tidyverse)
-library(sn)
-library(modeest)
-set.seed(1)
-##x <- rlnorm(1000, meanlog = .6, sdlog = .1) * 100
-x <- rsn(n=1000, xi=0, omega=1, alpha=100, tau=.1, dp=NULL)
-s <- tibble(s = c(mean(x),
-                  median(x),
-                  mlv(x, method = "asselin")),
-            t = c("Mean", "Median", "Mode"))
-ggplot(tibble(x), aes(x)) +
-    geom_density(fill = "dodgerblue", alpha = 0.1, col = "dodgerblue") +
-    geom_vline(data = s, aes(xintercept = s, col = t), size = 1) +
-    scale_color_brewer(type = "qual", palette = 2, name = NULL) + 
-    theme_void(base_size = 20) +
-    theme(legend.direction="horizontal",
-          legend.position = "bottom")
-```
+1. Frequency (counting)
+2. Central tendency (mean, median, mode)
+3. Dispersion (range, variance)
+4. Position (percentiles)
+5. Shape (skew and kurtosis)
+</div>
+<div class="cols">
+![](../images/descriptive-statistics.png)
+</div>
+Open `scripts/04-statistics.R`
 
 ## Central Tendency
 ```{r, echo=TRUE, results='hide'}
-turbidity <- filter(gormsey, Measure == "Turbidity")
+turbidity <- filter(labdata, Measure == "Turbidity")
 
 mean(turbidity$Result)
 sum(turbidity$Result) / length(turbidity$Result)
@@ -424,15 +459,19 @@ sum(turbidity$Result) / length(turbidity$Result)
 median(turbidity$Result)
 ```
 
-Calculating the mode of continuous data is complex and requires a specialised package.
+No standard function for calculating the mode.
 
-## Dispersion
+## Measures of Dispersion
 ```{r, echo=TRUE, results='hide'}
 min(turbidity$Result)
 max(turbidity$Result)
 range(turbidity$Result)
 diff(range(turbidity$Result))
+```
 
+$$s=\sqrt{\frac{\sum_{i=1}^n (x_i-\bar{x})^2}{n-1}}$$
+
+```{r, echo=TRUE, results='hide'}
 var(turbidity$Result)
 sd(turbidity$Result)
 
@@ -440,8 +479,8 @@ sqrt(sum((turbidity$Result - mean(turbidity$Result))^2) /
        (length(turbidity$Result) - 1))
 ```
 
-## Quantiles
-<div class="column" style="float:left; width: 50%"><small>
+## Measure of Position (Quantiles and Percentiles)
+<div class="cols"><small>
 
 1. Place the observations in ascending order: $y_1, y_2, \ldots y_n$.
 2. Calculate the rank ($r$) of the required percentile
@@ -450,9 +489,9 @@ sqrt(sum((turbidity$Result - mean(turbidity$Result))^2) /
     - $r$: Ranking number
     - $\lfloor r \rfloor$: Floor or $r$
     - $\lceil r \rceil$: Ceiling of $r$
-
+    
 </small></div>
-<div class="column" style="float:left; width: 50%">
+<div class="cols">
 ```{r, fig.asp=9/16}
 x <- c(1, 2, 3.5, 4, 5)
 y <- 2 * x
@@ -489,13 +528,14 @@ points(x, y)
 ```
 </div>
 
-```{r, echo=TRUE, results='hide'}
-IQR(turbidity$Result)
+## Measures of Position (continued)
+```{r, echo=TRUE}
 summary(turbidity$Result)
+fivenum(turbidity$Result)
 quantile(turbidity$Result, type = 6, probs = 0.95)
 ```
 
-## Quantiles (continued)
+## Measures of Position (continued)
 
 ```{r, fig.asp=9/16}
 sample <- c(1:17, 63, 170, 300)
@@ -531,15 +571,12 @@ legend("topleft", legend = c("Excel", "Weibull"), col = c("blue", "red"), lwd = 
 ```
 
 ## Grouped Analysis
-![](images/grouping.png)
+![](../images/grouping.png)
 
 ## Grouped Analysis
 
-```{r, echo=TRUE, results='hide'}
-measures <- group_by(gormsey, Measure)
-summarise(measures, max = max(Result))
-
-measures_town <- group_by(gormsey, Measure, Suburb)
+```{r, echo=TRUE}
+measures <- group_by(labdata, Measure, Suburb)
 summarise(measures,
           Samples = n(),
           Mean = mean(Result),
@@ -548,11 +585,15 @@ summarise(measures,
 ```
 
 ## Coding Practice
-1. What is the average number of samples taken at the sample points in Gormesey?
-2. Which sample point has breached the maximum value of 0.25 mg/l for THM most often?
-3. What is the highest 95th percentile of the turbidity for each of the towns in Gormsey, using the Weibull method?
 
-# Program
+1. Which suburb recorded the highest level of chlorine?
+2. What is the average 95^th percentile of the turbidity for the towns in Gormsey, using the Weibull method?
+
+Answers in `scripts/case-study-1.R`
+
+# {data-background="../images/r4h2o-banner.jpg"}
+
+# Program Session 2
 1. Session 1 recapitulation
 2. Principles of visualising data 
 3. Visualising data with _ggplot2_
@@ -561,149 +602,179 @@ summarise(measures,
 6. Learning R
 
 ## Session 1 recapitulation
-[lucidmanager.org/r4h2o/cheat-sheet.pdf](https://lucidmanager.org/r4h2o/cheat-sheet.pdf)
-
-![](images/r4h2o-cheat-sheet.png){height=400}
-
-## Case Study 1
-1. What is the average number of samples taken at the sample points in Gormesey?
-2. Which sample point has breached the maximum value of 0.25 mg/l for THM most often?
-3. What is the highest 95th percentile of the turbidity for each of the towns in Gormsey, using the Weibull method?
-    - Use the `arrange()` function to sort a data frame
+![](../images/r4h2o-cheat-sheet.png){height=500}
 
 ## Coding Challenge
 - Go to the Bureau of Meteorology website
-    - http://www.bom.gov.au/climate/data/stations/
-- Download rainfall data for your favourite weather station
+    - [bom.gov.au/climate/data](http://www.bom.gov.au/climate/data/)
+- Download daily rainfall data for your favourite weather station
 - Determine the top five years with the highest total rainfall
 - Tips: 
     - Variable names with spaces need to be between back ticks: \``variable name`\`
     - The data has missing values. Use the `na.rm = TRUE` option in the `sum()` function
-    - Use the `top_n()` function to list the top five years
+    - Use the `slice_max()` function to list the top five years
 
 ## Solution
 ```{r, echo=TRUE}
 library(tidyverse)
-bom <- read_csv("casestudy1/IDCJAC0009_088110_1800_Data.csv")
-bom_year <- group_by(filter(bom, Year != 2022), Year)
-annual_rain <- summarise(bom_year, 
-                         TotalRain = sum(`Rainfall amount (millimetres)`, 
-                                         na.rm = TRUE))
-top_n(annual_rain, 5)
+# Bridgewater weather station
+bom <- read_csv("data/IDCJAC0009_081058_1800_Data.csv")
+bom_grouped <- group_by(bom, Year)
+bom_annual <- summarise(bom_grouped, 
+                        Rainfall = sum(`Rainfall amount (millimetres)`, 
+                                       na.rm = TRUE))
+slice_max(bom_annual, order_by = Rainfall, n = 5)
 ```
 
-# Principles of visualising data
-![](images/ggplot.png)
+# Visualising Data
+```{r, fig.height=4}
+data(anscombe)
+library(tidyverse)
 
-## Jackson Pollock
-![](images/bluepoles.jpg)
+  p <- anscombe %>%
+    select(1:4) %>%
+    pivot_longer(cols = 1:4, names_to = "set", values_to = "x") %>%
+    mutate(set = str_remove(set, "x"))
 
-<small> Jackson Pollock (1952) Blue Poles number 11. Drip Painting in enamel and aluminium paint with glass on canvas (National Gallery, Canberra).</small>
+  q <- anscombe %>%
+    select(5:8) %>%
+    pivot_longer(cols = 1:4, names_to = "set", values_to = "y") %>%
+    mutate(set = str_remove(set, "y"))
 
-## r/dataisugly
-![](images/data-is-ugly.jpg){height=600}
+  tibble(p, y = q$y) %>%
+    mutate(set = paste("Set", set))  %>%
+    ggplot(aes(x, y)) +
+    geom_smooth(method = "lm", se = FALSE, col = "gray") +
+    geom_point(size = 2.5, colour = "black", fill = "gray", shape = 21) +
+    facet_wrap(~set) + 
+    theme_bw(base_size = 12) +
+    labs(x = NULL, y = NULL, title = "Anscombe's Quartet")
+```
 
-## Piet Mondrian
-![](images/mondrian.jpg)
-<small>Piet Mondrian (1928) Composition with red, yellow and blue. Oil on canvas (Municipal Museum, the Hague).</small>
+## Datasaurus Dozen
+```{r}
+  library(datasauRus)
 
-## Data-Pixel Ratio
-![](images/data-pixel-ratio.png)
+  ggplot(datasaurus_dozen, aes(x = x, y = y)) +
+      geom_point(size = 1) +
+      theme_void(base_size = 20) +
+      theme(legend.position = "none") +
+      facet_wrap(~dataset, ncol = 4)
+```
 
-## Data Story-Telling
-![](images/lego-visualisation.jpg)
-
-## r/dataisugly
-![](images/nsidc_global_area_byyear_b.jpg){height=600}
-
-## Solution
-[lucidmanager.org/data-science/storytelling-with-data/](https://lucidmanager.org/data-science/storytelling-with-data/)
-![](images/ice-data-beautiful.png){height=500}
-
-## {data-background="images/visualisations.jpg"}
-
-## Grammar of Graphics
-<div class="column" style="float:left; width: 50%">
-1. _Data_: exists at the lowest level, without which there is nothing to visualise.
-2. _Aesthetics_: defines which graph variables are visualised and how they look (colour, line shapes and sizes).
-3. _Geometries_: shapes that represent the data, such as bars, pies or lines.
-4. _Facets_: used to divide a visualisation into subplots.
-5. _Statistics_: relate to any specific transformations to summarise the data, such as trend lines.
-6. _Coordinates_: define how data is represented on the canvas. Mostly used in mapping.
-7. _Themes_: defines the non-data pixels (font sizes, backgrounds and so on)
-</div>
-<div class="column" style="float:left; width: 50%">
-![](images/grammar-of-graphics.png)
-</div>
-
-# Base Plots
+## Basic Plotting
 - Best for exploratory visualisations
 - Plotting functions
     - `plot()`
     - `barplot()`
     - `histogram()`
     - `boxplot()` 
+
 - Annotation functions (add elements to the plot)
     - `abline()`
     - `points()`
 
 ## Base plotting parameters
 - `pch`: the plotting symbol (default is open circle)
-- `lty`: the line type (default is solid line), can be dashed, dotted, etc.
+- `lty`: the line type (default is solid line), can be dashed, dotted, etc..
 - `lwd`: the line width, specified as an integer multiple
-- `col`: the plotting color, specified as a number, string, or hex code
+- `col`: the plotting colour, specified as a number, string, or hex code
 - `xlab`: character string for the x-axis label
 - `ylab`: character string for the y-axis label
 
+## Plotting Example
 
-## Examples
+`scripts/04-statistics.R` end of script
 
-```{r, echo=TRUE}
+```{r, fig.height=3, fig.width=6}
 library(tidyverse)
-gormsey <- read_csv("casestudy1/gormsey.csv")
-turbidity <- filter(gormsey, Measure == "Turbidity")
+labdata <- read_csv("data/water_quality.csv")
+turbidity <- filter(labdata, Measure == "Turbidity")
 
+par(mfrow = c(1, 3))
 plot(turbidity$Date, turbidity$Result, 
-     type = "l",
-     xlab = "Date",
-     ylab = "Result",
+     type = "l", xlab = "Date", ylab = "Result",
      main = "Turbidity measurements")
 abline(h = 5, col = "red")
 
 boxplot(log10(Result) ~ Suburb, data = turbidity,
         pch = 19, las = 3, col = "brown",
-        main = "Turbidity measurements")
+        main = "Turbidity measurements", xlab = NULL)
 abline(h = log10(5), col = "red")
 
 p95 <- summarise(group_by(turbidity, Suburb), 
                  p95 = quantile(Result, 0.95))
 
-barplot(p95$p95, names.arg = p95$Town)
+barplot(p95$p95, names.arg = p95$Suburb,
+        main = "95th percentile turbidity", las = 3)
 abline(h = 5, col = "red")
 ```
 
+# Data Story-Telling
+![](../images/lego-visualisation.jpg)
+
+## r/dataisugly
+![](../images/data-is-ugly.jpg){height=600}
+
+## r/dataisbeautiful
+![](https://lucidmanager.org/images/data-science/nsidc_global_area_byyear_b.jpg){height=600}
+
+## Solution
+[lucidmanager.org/data-science/storytelling-with-data/](https://lucidmanager.org/data-science/storytelling-with-data/)
+![](https://lucidmanager.org/images/data-science/ice-data-beautiful.png){height=500}
+
+## Jackson Pollock
+![](../images/bluepoles.jpg)
+
+<small> Jackson Pollock (1952) Blue Poles number 11. Drip Painting in enamel and aluminium paint with glass on canvas (National Gallery, Canberra).</small>
+
+## Piet Mondrian
+![](../images/mondrian.jpg)
+<small>Piet Mondrian (1928) Composition with red, yellow and blue. Oil on canvas (Municipal Museum, the Hague).</small>
+
+## Data-Pixel Ratio
+![](../images/data-pixel-ratio.png)
+
+## {data-background="../images/visualisations.jpg"}
+
 # ggplot2 package
-![](images/ggplot2.png){height=600}
+![](../images/ggplot2.png){height=500}
+
+`scripts/05-visualise.R`
+
+## Grammar of Graphics
+<div class="column" style="float:left; width: 50%">
+1. _Data_: base material
+2. _Aesthetics_: graph variables to be visualised
+3. _Geometries_: shapes that represent the data
+4. _Facets_: divide a visualisation into sub-plots.
+5. _Statistics_: data summaries, such as trend lines.
+6. _Coordinates_: how data is represented on the canvas
+7. _Themes_: non-data pixels
+</div>
+<div class="column" style="float:left; width: 50%">
+![](../images/grammar-of-graphics.png)
+</div>
 
 ## Examples 1
 ```{r, echo = TRUE, eval=FALSE}
-ggplot(gormsey, aes(Town))
+ggplot(labdata, aes(Town))
 
-ggplot(gormsey, aes(Measure)) + 
+ggplot(labdata, aes(Measure)) + 
     geom_bar()
 
-turbidity <- filter(gormsey, Measure == "Turbidity")
+turbidity <- filter(labdata, Measure == "Turbidity")
 
 ggplot(turbidity, aes(Date, Result, col = Town)) + 
     geom_line()
 ```
 
 ## Color Palettes
-![](images/colorbrewer.png)
+![](../images/colorbrewer.png){height=400}
 
 ## ColorBrewer
 ```{r, echo = TRUE, eval=FALSE}
-ggplot(gormsey, aes(Town, fill = Measure)) +
+ggplot(labdata, aes(Town, fill = Measure)) +
     geom_bar() +
     scale_fill_brewer(type = "qual",
                       palette = "Dark2")
@@ -711,7 +782,7 @@ ggplot(gormsey, aes(Town, fill = Measure)) +
 library(RColorBrewer)
 display.brewer.all() 
 
-ggplot(gormsey, aes(Town, fill = Measure)) +
+ggplot(labdata, aes(Town, fill = Measure)) +
     geom_bar() +
     scale_fill_manual(values = c("cornflowerblue",
                                  "darkseagreen",
@@ -728,7 +799,7 @@ ggplot(turbidity, aes(Date, Result, col = Town)) +
 
 ## Statistics
 ```{r, echo = TRUE, eval=FALSE}
-thm <- filter(gormsey, Measure == "THM")
+thm <- filter(labdata, Measure == "THM")
 thm_grouped <- group_by(thm, Date)
 thm_max <- summarise(thm_grouped, thm_max = max(Result))
 
@@ -737,8 +808,6 @@ ggplot(thm_max, aes(Date, thm_max)) +
     geom_line() + 
     geom_hline(yintercept = 0.25, col = "red")
 ```
-
-Practice Task: Convert this visualisation to a faceted graph to show the trend per system.
 
 ## Coordinates
 ```{r, echo = TRUE, eval=FALSE}
@@ -756,22 +825,20 @@ ggplot(turbidity, aes(Town, Result)) +
 
 
 ## Themes
-```{r, echo = TRUE, eval=FALSE}
-ggplot(turbidity, aes(Date, Result)) + 
-    geom_area(col = "dodgerblue", fill = "dodgerblue") + 
-    facet_wrap(~Town, ncol = 1) + 
-    theme_void(base_size = 24)
+```{r, fig.height=2.5, fig.width=5}
+  library(gridExtra)
 
-ggplot(gormsey, aes(Measure)) +
-    geom_bar() +
-    theme(axis.text.x = element_text(angle = 90))
-
-ggsave("casestudy1/measures.png", width = 15, height = 10, dpi = 300, units = "cm")
+  p <- ggplot(labdata, aes(Measure)) + geom_bar()
+  a <- p + theme_classic(base_size = 8) + ggtitle("theme_clasic()")
+  b <- a + theme_bw(base_size = 8) + ggtitle("theme_bw()")
+  c <- a + theme_minimal(base_size = 8) + ggtitle("theme_minimal()")
+  d <- a + theme_void(base_size = 8) + ggtitle("theme_void()")
+  grid.arrange(a, b, c, d)
 ```
 
 ## Combining data sets
 ```{r, echo=TRUE, results='hide'}
-chlorine <- filter(gormsey, Measure == "Chlorine Total")
+chlorine <- filter(labdata, Measure == "Chlorine Total")
 
 chlorine_gr <- group_by(chlorine, Suburb)
   
@@ -782,24 +849,27 @@ ggplot(chlorine, aes(Date, Result)) +
   facet_wrap(~Suburb) + 
   geom_hline(data = chlorine_avg, aes(yintercept = avg), col = "blue", lty = 2) + 
   theme_minimal() + 
-  labs(title = "Average total chlorine leves in Gormsey",
+  labs(title = "Average total chlorine leves in labdata",
        x = NULL, y = "Total Chlorine")
 ```
 
 ## ggplot2 Cheat Sheet
-https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf
+![](../images/ggplot2-cheat-sheet.png){height=600}
+
+# 
+![](../images/coffee.jpg)
 
 # Data Science Workflow
-![](images/workflow.png)
+![](../images/workflow.png)
 
 
 ## Replicable and Reproducible
 [coderefinery.github.io/reproducible-research](https://coderefinery.github.io/reproducible-research)
 <div class="column" style="float:left; width: 50%">
-![](images/replicable.png){height=300}
+![](../images/replicable.png){height=300}
 </div>
 <div class="column" style="float:left; width: 50%">
-![](images/reproducible.png){height=300}
+![](../images/reproducible.png){height=300}
 </div>
 
 ## Define
@@ -809,17 +879,28 @@ https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-
 ```{r, echo=TRUE}
 library(readr)
 library(dplyr)
-gormsey <- read_csv("casestudy1/gormsey.csv")
-thm <- filter(gormsey, Measure == "THM")
+labdata <- read_csv("data/water_quality.csv")
+thm <- filter(labdata, Measure == "THM")
 glimpse(thm)
 ```
 
 ## Explore
-![](images/datasaurus.png){height=400}
+```{r}
+  library(tidyverse)
+  library(datasauRus)
+
+  filter(datasaurus_dozen,
+         dataset %in% c("dino", "x_shape", "star", "bullseye")) %>%
+      ggplot(aes(x = x, y = y)) +
+      geom_point() +
+      theme_void(base_size = 20) +
+      theme(legend.position = "none") +
+      facet_wrap(~dataset, ncol = 6)
+```
 
 ## Explore THM
 ```{r, echo = TRUE, fig.height=2.5}
-filter(gormsey, Measure == "THM") %>% 
+filter(labdata, Measure == "THM") %>% 
   ggplot(aes(Suburb, Result)) + 
   geom_boxplot() + 
   geom_hline(yintercept = .2, col = "red", linetype = "longdash") + 
@@ -842,12 +923,12 @@ filter(thm, Result > 0.2)
 
 
 ## Communicate (RMarkdown)
-![](images/rmarkdown.png)
+![](../images/rmarkdown.png)
 
 ## Tables
 ```{r, echo=TRUE}
 library(knitr)
-thm_fail <- filter(gormsey, Measure == "THM" & Result > .25)
+thm_fail <- filter(labdata, Measure == "THM" & Result > .25)
 kable(select(thm_fail, Date, Suburb, Result),
       caption = "Example outut of the `kable()` function.", 
       digits = 2)
@@ -863,7 +944,6 @@ floor(a)
 ceiling(a)
 signif(a, 5)
 ```
-
 
 # Learning Data Science
 
