--- a/course/session-1a.Rmd
+++ b/course/session-1a.Rmd
@@ -62,7 +62,12 @@ library(JuliaCall)
 </div>
 
 ## Data Science Learning Curve
+<div class="cols">
 ![](images/r-learning-curve.jpg){height=500}
+</div>
+<div class="cols">
+The steeper the learning curve, the bigger the reward.
+</div>
 
 # What is Data Science?
 <div class="cols">
@@ -77,9 +82,8 @@ Many data scientists have published modifications of this model. Can you think o
 ## What is Useful Data Science?
 ![](images/feedback-loop.png)
 
-## Smart Water Networks and Data Science
-![](images/swan-layers.jpg)
-<small>Source: [Smart Water Networks Forum](https://swan-forum.com/smart-water-network/).</small>
+## What is Good Data Science?
+![](images/vitruvius.png)
 
 ## Spreadsheets are Chaos
 ![](images/reverse-engineer-spreadsheet.jpg)
@@ -89,7 +93,7 @@ Source: [lucidmanager.org](https://lucidmanager.org/data-science/spreadsheets-fo
 ```{r echo=TRUE}
 library(readr)
 library(dplyr)
-labdata <- readr::read_csv("data/water_quality.csv")
+labdata <- read_csv("data/water_quality.csv")
 group_by(labdata, Measure) %>% 
     summarise(min = min(Result),
               mean = mean(Result),
@@ -105,7 +109,7 @@ labdata = pd.read_csv("data/water_quality.csv")
 labdata.groupby("Measure")["Result"].agg([np.min, np.mean, np.std])
 ```
 
-## Code is Poetry: Julia
+## Code is Poetry: Julia & SQL
 ```{julia echo=TRUE, eval=FALSE}
 using DataFrames, CSV, StatsBase
 labdata = DataFrame(CSV.File("data/water_quality.csv"));
@@ -114,6 +118,18 @@ combine(groupby(labdata, :Measure),
         :Result => minimum,
         :Result => mean,
         :Result => std)
+```
+
+```{SQL, echo=TRUE}
+SELECT
+    Measure,
+    MIN(Result) AS min,
+    AVG(Result) AS mean,
+    STDEV(Result) AS sd
+FROM
+    labdata
+GROUP BY
+    Measure;
 ```
 
 # Basics of the R Language
@@ -146,9 +162,26 @@ sqrt(pipe_area / (pi / 4)) * 1000
 Internet meme.
 
 ```{r, echo=TRUE}
-6 / 2 * (1 + 2)
+3 - 3 * 6 + 2
 ```
 </div>
+
+## REPL and Scripting
+```{r}
+DiagrammeR::grViz("
+digraph {
+         node [fontname=Arial fontsize=10 shape=rect]
+   rankdir=LR
+   Script
+File [shape=folder]
+
+Script -> REPL [constraint=false]
+REPL -> Console 
+REPL -> File
+REPL -> Graphic
+REPL -> HTML}", width=900, height=600)
+```
+
 
 ## Vectors
 ```{r, echo=TRUE, results='hide'}
@@ -185,13 +218,18 @@ points(150, (pi / 4) * (150 / 1000)^2, col = "red")
 Open: `scripts/02-basics.R`
 
 ## Variable Names
+<div class="cols">
 Use meaningful variable names and use a consistent naming convention
 
-- `flowdaily`: All lowercase
-- `flow.daily`: Period-separated
+- `flowdaily`: lowercase
+- `flow.daily`: Dot case
 - `flow_daily`: Snake case
 - `flowDaily`: Camel case
-- `FlowDaily`: Upper camel case
+- `FlowDaily`: Pascal case
+</div>
+<div class="cols">
+![](images/cases.jpg)
+</div>
 
 ## Bugs
 - Debugging (step through code)
@@ -209,21 +247,27 @@ Use meaningful variable names and use a consistent naming convention
 - Follow a [style guide](https://style.tidyverse.org/)
 - Open the `scripts/02-basics.R` script and explore the content
 
-## Improve this piece of code
+## Make this code more readable
 <div class="cols">
-```{r, echo=TRUE, eval=FALSE}
-# Sedimentation Tank
-D<-8
-d1<-3
-d2<-1
-v=((pi/4)*d^2*(d1+(d2/3))
-q<-4
+- Diameter: $D=8m$
+- Depth: $d_1=3, d_2=0.9m$
+- Volume: $V = \frac{\pi}{4} D^2 \big( d_1 + \frac{d_2}{3} \big)$
+- Flow: $Q=4 m^3/h$
+- Detention time: $t = V / Q$
 
-(t<-v/q)
-```
+![](https://theconstructor.org/wp-content/uploads/2016/12/types-of-sedimentation-tank.jpg)
 </div>
 <div class="cols">
-![](https://theconstructor.org/wp-content/uploads/2016/12/types-of-sedimentation-tank.jpg)
+```{r, echo=TRUE}
+# Hopper Bottom Sedimentation Tank
+D<-8
+d1<-3
+d2<-0.9
+V=(pi/4)*D^2*(d1+(d2/3))
+Q<-4
+
+(t<-V/Q)
+```
 </div>
 
 ## Improved version
@@ -266,7 +310,6 @@ Create an R script and answer:
 
 1. What is the flow ($Q$) in the channel in m^3^/s when the height $h = 100$ mm?
 2. What is the average flow for these three heights: 150mm, 136mm, 75mm, in litres per second?
-3. Plot the flow in m^3^/s for all heights between 50mm and 500mm.
 </div>
 
 <div class="column" style="float:right; width: 50%">
@@ -359,19 +402,18 @@ Open `scripts/03-data-frames.R`
 
 ## Variable Types
 ![](images/variable-types.png)
+*Scalar, vector and data frame / tibble (matrix)*
 
 ## Variable Classes
+- Integer (${\ldots -3, -2, -1, 0, 1, 2, 3, \ldots}, \mathbb{N}$)
 - Numeric ($\mathbb{R}$)
-- Text (`"abcd"`)
+- Complex numbers ($a + bi, \mathbb{C}$)
 - Dates (`"`r Sys.Date()`"`)
-- Factors (classifications): (`"Male", "Female", "Other"`)
+- Text (`"abcd"`)
 - Boolean (`TRUE`, `FALSE`)
-- Integer (${\ldots -3, -2, -1, 0, 1, 2, 3, \ldots}$)
-- Complex numbers ($a + bi$)
+- Factors (classifications): (`"Male", "Female", "Other"`)
 
-Conversion: `as.numeric()`, `as.character`, `as.Date()`.
-
-Scalar, vector and data frame / tibble (matrix)
+Conversions: `as.numeric()`, `as.character`, `as.Date()`.
 
 ## Filtering
 ![](images/filter.png)
@@ -402,20 +444,7 @@ Measures of:
 <div class="cols">
 ![](images/descriptive-statistics.png)
 </div>
-Open `scripts/04-statistics.R`
-
-## Measures of Dispersion (Standard Deviation)
-
-R implements [Bessel's Correction](https://en.wikipedia.org/wiki/Bessel%27s_correction)
-
-$$s=\sqrt{\frac{\sum_{i=1}^n (x_i-\bar{x})^2}{n-1}}$$
-
-```{r, echo=TRUE}
-sqrt(sum((turbidity$Result - mean(turbidity$Result))^2) / 
-       (length(turbidity$Result) - 1))
-
-sd(turbidity$Result)
-```
+Open `scripts/04-statistics.R`K
 
 ## Measure of Position (Quantiles and Percentiles)
 <div class="cols"><small>
@@ -427,6 +456,9 @@ sd(turbidity$Result)
     - $r$: Ranking number
     - $\lfloor r \rfloor$: Floor or $r$
     - $\lceil r \rceil$: Ceiling of $r$
+    
+    
+There are nine possible ways to interpolate the data. Run `?quantile` and read the help file.
     
 </small></div>
 <div class="cols">
@@ -516,3 +548,5 @@ legend("topleft", legend = c("Excel", "Weibull"), col = c("blue", "red"), lwd = 
     - Variable names with spaces need to be between back ticks: \``variable name`\`
     - The data has missing values. Use the `na.rm = TRUE` option in the `sum()` function
     - Use the `slice_max()` function to list the top five years
+
+
